--- a/index.css
+++ b/index.css
@@ -123,11 +123,10 @@ div .user {
 }
 
 div .user_img:hover {
+    margin-top: 0;
+    margin-right: 0;
     position: relative;
-    top: 20px;
-    bottom: 20px;
-    right: 20px;
-    left: 20px;
+    left: -30px;
     height: 100px;
     width: 100px;
 }
