--- a/index.css
+++ b/index.css
@@ -152,7 +152,7 @@ div .user span {
 
 .banner .wrapper {
     height: 420px;
-    background-image: url(https://www.itheima.com/special/brandzly/images/ban1.jpg);
+    background-image: url(http://pmo840cba.hkpic1.websiteonline.cn/upload/xh2j.jpg);
     background-position: -480px -150px;
 }
 
@@ -207,7 +207,7 @@ div .user span {
 }
 
 .banner .right .contect dt {
-    font-size: 18px;
+    font-size: 16px;
     color: #4d4b4e;
 }
 
