--- a/index.css
+++ b/index.css
@@ -152,7 +152,7 @@ div .user span {
 
 .banner .wrapper {
     height: 420px;
-    background-image: url(http://pmo840cba.hkpic1.websiteonline.cn/upload/xh2j.jpg);
+    background-image: url(./bgc_1.jpg);
     background-position: -480px -150px;
 }
 
